--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,12 +68,14 @@ build_script:
   # - conda build --quiet -c conda-forge conda-recipe --output-folder conda_dist
 
 test_script:
+  - ps: "cd pagral"
   - ps: "ls ."
   - ps: |
-      python -m unittest pagral.tests.graph.test_basegraph
+      python -m unittest tests.graph.test_basegraph
       if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
-  - coverage run -m unittest pagraltests.graph.test_basegraph -s pagral
+  - coverage run -m unittest tests.graph.test_basegraph
   - coverage xml
+  - ps: "cd .."
 
 after_test:
   - ps: "ls pypi_dist"
