[build] add unit tests and coverage analysis

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -90,7 +90,7 @@ test_script:
 # - path: conda_dist\**\*.tar.bz2
 # - path: pypi_dist\*.whl
 
-on_success:
+# on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
 #
 
