--- a/appveyor.yml
+++ b/appveyor.yml
@@ -98,7 +98,7 @@ on_finish:
   # - sh: curl -sflL 'https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-ssh.sh' | bash -e -
 
   # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-  - codecov -t CODECOV_TOKEN -f pagral\coverage.xml
+  - codecov -f pagral\coverage.xml
 
   # Upload test results to AppVeyor
   #  - ps: |
