[build] add unit tests and coverage analysis

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -88,6 +88,7 @@ artifacts:
 # - path: conda_dist\**\*.tar.bz2
 # - path: pypi_dist\*.whl
   - path: pagral\coverage.xml
+  - path: pagral\.coverage
 
 # on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
