--- a/appveyor.yml
+++ b/appveyor.yml
@@ -103,7 +103,6 @@ on_finish:
   - codecov -f pagral\coverage.xml
 
   # Upload test results to AppVeyor
-  #  - ps: |
-  #    # this uploads nosetests.xml produced in test_script step
-  #    $wc = New-Object 'System.Net.WebClient'
-  #    $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\nosetests.xml))
+  - ps: |
+    $wc = New-Object 'System.Net.WebClient'
+    $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path pagral\coverage.xml))
