--- a/appveyor.yml
+++ b/appveyor.yml
@@ -104,5 +104,5 @@ on_finish:
 
   # Upload test results to AppVeyor
   - ps: |
-    $wc = New-Object 'System.Net.WebClient'
-    $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path pagral\coverage.xml))
+      $wc = New-Object 'System.Net.WebClient'
+      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\pagral\coverage.xml))
