--- a/appveyor.yml
+++ b/appveyor.yml
@@ -105,8 +105,8 @@ on_finish:
 
   # Upload test results to AppVeyor
   - ps: |
-      [xml]$content = Get-Content "C:\projects\pagral\pagral\pagral\coverage.xml"
+      [xml]$content = Get-Content "C:\projects\pagral\pagral\coverage.xml"
       $content.'test-results'.'test-suite'.type = "Powershell"
-      $content.Save("C:\projects\pagral\pagral\pagral\coverage.xml")
+      $content.Save("C:\projects\pagral\pagral\coverage.xml")
       $wc = New-Object 'System.Net.WebClient'
       $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\pagral\coverage.xml))
