--- a/appveyor.yml
+++ b/appveyor.yml
@@ -95,6 +95,15 @@ artifacts:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
 
 
+deploy:
+  - provider: GitHub
+      artifact: .coverage           # upload all NuGet packages to release assets
+      draft: false
+      prerelease: false
+      on:
+        branch: master                # release from master branch only
+        APPVEYOR_REPO_TAG: false       # deploy on tag push only
+
 on_finish:
   # - sh: export APPVEYOR_SSH_BLOCK=true
   # - sh: curl -sflL 'https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-ssh.sh' | bash -e -
@@ -106,4 +115,4 @@ on_finish:
   # Upload test results to AppVeyor
   - ps: |
       $wc = New-Object 'System.Net.WebClient'
-      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path "C:\projects\pagral\pagral\coverage.xml"))
+      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path pagral\coverage.xml))
