--- a/appveyor.yml
+++ b/appveyor.yml
@@ -101,7 +101,7 @@ deploy:
     draft: false
     prerelease: false
     auth_token:
-      secure: %auth_token%
+      secure: qmatt+fSRfcwrPNpBFF+bXSOtwPdIJ4cqBoHnxEkuLDLd4N8GHJqeg2QPxaFI6u2
     on:
       branch: master                # release from master branch only
       APPVEYOR_REPO_TAG: false       # deploy on tag push only
