[build] add unit tests and coverage analysis

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -97,6 +97,8 @@ artifacts:
 
 deploy:
   - provider: GitHub
+    release: pagral-v$(APPVEYOR_BUILD_VERSION)
+    description: 'Latest tagged release of Pagral'
     artifact: pagral\coverage.xml           # upload all NuGet packages to release assets
     draft: false
     prerelease: false
